# NagaKang

./: EngineerLog.md  README.md  pyproject.toml
docs/: documentation_structure.md  step1_backlog_user_stories.md  step1_product_requirements.md  step1_ux_flows.md  step2_architecture_diagrams.md  step2_architecture_tech_choices.md  step3_audio_engine_framework.md  step3_pattern_bridge_walkthrough.md  step3_tracker_notebook_widget.md  step3_tracker_notebook_widget.py  step3_tracker_ui_mock.md  step4_sequencer_foundations.md  step5_node_builder_kickoff.md  step6_mixer_kickoff.md  step6_mixer_kivy_mock.py  step7_gui_shell.md  step8_project_manifest.md
prototypes/: __init__.py  audio_engine_skeleton.py  domain_models.py
tests/: conftest.py  test_audio_engine.py  test_audio_engine_skeleton.py  test_audio_mixer.py  test_audio_modules.py  test_compare_stress_results.py  test_domain_models.py  test_domain_persistence.py  test_domain_project_export_service.py  test_domain_project_import_service.py  test_domain_project_manifest.py  test_domain_repository.py  test_gui_mixer_board.py  test_gui_preview.py  test_gui_tracker_panel.py  test_mixer_diagnostics.py  test_mixer_trend_ci.py  test_node_graph.py  test_pattern_editor.py  test_publish_diagrams.py  test_run_s3_smoke_test.py  test_tools_autosave_stress_harness.py  test_tools_export_project_bundle.py  test_tools_import_project_bundle.py  test_tracker_bridge.py  test_tracker_notebook_widget.py  test_tracker_playback_worker.py  test_tracker_preview_service.py
tools/: autosave_stress_harness.py  build_windows_bundle.py  (+7 more)
(+64 files in other folders)
